--- a/qsequoia2/scripts/tools_settings/tools_settings.ui
+++ b/qsequoia2/scripts/tools_settings/tools_settings.ui
@@ -6,13 +6,34 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>534</width>
+    <height>422</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>tools</string>
   </property>
+  <widget class="QTreeWidget" name="functionsLibrary">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>531</width>
+     <height>421</height>
+    </rect>
+   </property>
+   <property name="contextMenuPolicy">
+    <enum>Qt::PreventContextMenu</enum>
+   </property>
+   <property name="toolTip">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Fonctions&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <column>
+    <property name="text">
+     <string>Outils</string>
+    </property>
+   </column>
+  </widget>
  </widget>
  <resources/>
  <connections/>
