--- a/qsequoia2/scripts/tools_settings/tools_settings.ui
+++ b/qsequoia2/scripts/tools_settings/tools_settings.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>tools</class>
- <widget class="QWidget" name="tools">
+ <widget class="QDialog" name="tools">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -13,26 +13,18 @@
   <property name="windowTitle">
    <string>tools</string>
   </property>
-  <widget class="QTreeWidget" name="functionsLibrary">
+  <widget class="QTabWidget" name="tabWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>531</width>
-     <height>421</height>
+     <width>571</width>
+     <height>431</height>
     </rect>
    </property>
-   <property name="contextMenuPolicy">
-    <enum>Qt::PreventContextMenu</enum>
+   <property name="currentIndex">
+    <number>-1</number>
    </property>
-   <property name="toolTip">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Fonctions&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-   </property>
-   <column>
-    <property name="text">
-     <string>Outils</string>
-    </property>
-   </column>
   </widget>
  </widget>
  <resources/>
