--- a/qsequoia2/scripts/global_settings/global_settings.ui
+++ b/qsequoia2/scripts/global_settings/global_settings.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>418</width>
+    <width>615</width>
     <height>300</height>
    </rect>
   </property>
@@ -94,7 +94,7 @@
      <item row="4" column="1">
       <layout class="QHBoxLayout">
        <item>
-        <widget class="QLineEdit" name="orga"/>
+        <widget class="QLineEdit" name="adress"/>
        </item>
        <item>
         <spacer name="horizontalSpacer">
