--- a/qsequoia2/QSEQUOIA2_dockwidget_base.ui
+++ b/qsequoia2/QSEQUOIA2_dockwidget_base.ui
@@ -27,26 +27,45 @@
           <layout class="QHBoxLayout" name="horizontalLayout">
            <item>
             <widget class="QToolButton" name="project_folder">
+             <property name="toolTip">
+              <string>Choisir un dossier de projet</string>
+             </property>
              <property name="text">
               <string>...</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="name"/>
+            <widget class="QLineEdit" name="name">
+             <property name="toolTip">
+              <string>Nom de projet</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_2">
            <item>
-            <widget class="QPushButton" name="setstyle"/>
+            <widget class="QPushButton" name="setstyle">
+             <property name="toolTip">
+              <string>Paramètres généraux</string>
+             </property>
+            </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="watchdog"/>
+            <widget class="QPushButton" name="watchdog">
+             <property name="toolTip">
+              <string>paramètres watchdog</string>
+             </property>
+            </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="add_layers"/>
+            <widget class="QPushButton" name="add_on">
+             <property name="toolTip">
+              <string>Création d'add-on</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
@@ -108,6 +127,9 @@
         </item>
         <item>
          <widget class="QPushButton" name="reload">
+          <property name="toolTip">
+           <string>Rechargement du plugin</string>
+          </property>
           <property name="text">
            <string>♻️</string>
           </property>
